--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.github.mindlessgoober.calculator"
         minSdk 21
         targetSdk 33
-        versionCode 3
-        versionName "1.02"
+        versionCode 4
+        versionName "1.03"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -53,13 +53,13 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.3.0-beta02"
     implementation 'androidx.compose.material3:material3:1.0.0-beta02'
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta02"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha02'
+    implementation 'androidx.activity:activity-compose:1.6.0-rc02'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4-alpha07'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha07'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-beta02"
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-beta02"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.0-beta02"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha02'
 }
